--- a/camping/style.css
+++ b/camping/style.css
@@ -10,7 +10,7 @@ body {
 	margin: auto;
 }
 header {
-	background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://images3.alphacoders.com/151/151005.jpg);
+	background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://wallpapercave.com/w/wp1857438.jpg);
 	height: 100vh;
 	-webkit-background-size: cover;
 	background-size: cover;
